src/objects/Invoice__c.object
<CustomObject>
    <description>Invoice for a set of Charge Groups for a Guarantor / Patient combination</description>
    <fields>
        <fullName>All_Substatus__c</fullName>
        <label>All Substatus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deactivated_Charge_Groups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deactivated Charge Groups</description>
        <label>Deactivated Charge Groups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <formula>TRIM(Guarantor__r.Full_Name__c) &amp; &quot; (&quot; &amp;
TRIM(Patient__r.Full_Name__c) &amp; &quot;) - &quot; &amp;
TEXT(MONTH(Invoice_Date__c))&amp; &quot;/&quot; &amp;
TEXT(DAY(Invoice_Date__c)) &amp; &quot;/&quot; &amp;
TEXT(YEAR(Invoice_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Due Date</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guarantor__c</fullName>
        <description>Guarantor</description>
        <label>Guarantor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Guarantor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices (Guarantor)</relationshipLabel>
        <relationshipName>Guarantor</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invoice_Age__c</fullName>
        <formula>TODAY() - Invoice_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Balance__c</fullName>
        <label>Invoice Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>Invoice Date</description>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Status_Index__c</fullName>
        <label>Invoice Status Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <formula>CASE(Invoice_Status_Index__c,
9, &quot;Delinquent&quot;,
8, &quot;Overdue&quot;,
7, &quot;Due&quot;,
6, &quot;On Payment Plan&quot;,
5, &quot;Paid&quot;,
4, &quot;Paid&quot;,
3, &quot;Paid&quot;,
2, &quot;Unknown&quot;,
1, &quot;Invoice Voided&quot;,
0, &quot;Invoice Voided&quot;,
&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partial_Payment_Plan__c</fullName>
        <formula>And(Invoice_Status_Index__c &lt;&gt; 4,CONTAINS(All_Substatus__c,&quot;Payment&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partial Payment Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Patient</description>
        <label>Patient</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Patient</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sirono_ID__c</fullName>
        <description>Invoice ID External</description>
        <externalId>true</externalId>
        <label>Invoice ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Guarantor__c</columns>
        <columns>Patient__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>